--- a/app/globals.css
+++ b/app/globals.css
@@ -1,21 +1,35 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Playwrite+IN:wght@100..400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+.container {
+    max-width: 1200px;  
+    margin: 0 auto; 
+  
+    padding: 0 16px;  
   }
+
+   
+
+ .family{
+  font-family: "Playwrite IN", serif;
+   font-weight: 400;
+  font-style: normal;
+}
+ 
+
+
+.swiper-pagination-bullet {
+  background-color: #b65413; 
+}
+.swiper-pagination-bullet-active {
+  background-color: #c86a0b;  
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-}
+
+
+ 
